[gd_scene load_steps=6 format=3 uid="uid://dvardwy2ic14t"]

[ext_resource type="Texture2D" uid="uid://bjrmtigjo854n" path="res://graphics/enemies/scout.png" id="1_ds88b"]
[ext_resource type="Script" path="res://scenes/Enemies/Scout/scout.gd" id="1_p2eis"]
[ext_resource type="Shader" path="res://scenes/Enemies/Scout/scout.gdshader" id="2_akrbu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_owube"]
shader = ExtResource("2_akrbu")
shader_parameter/color = Color(0.819608, 0, 0.258824, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xdvyi"]
radius = 46.0

[node name="Scout" type="CharacterBody2D" groups=["Entities", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_p2eis")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_owube")
position = Vector2(45, 23)
rotation = 1.57079
texture = ExtResource("1_ds88b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xdvyi")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(125, -31)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(125, 9)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="DamageCooldown" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
